fix header overlaps

--- a/style.css
+++ b/style.css
@@ -588,10 +588,8 @@ box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.25);
 .headroom {
     will-change: transform;
     transition: transform 200ms linear;
-	 top:0px;
 	 width:100%;
 	 z-index:100;
-	 position:fixed;
 }
 .headroom--pinned {
     transform: translateY(0%);
@@ -1257,9 +1255,6 @@ body.single .entry-content {
  */
 
 @media screen and (min-width: 450px) {
-	.site-main {
-		margin-top:10em;
-	}
 	.site-navigation {
 		text-align: right;
 		float: right;
